tests/verifier/fail/test6.ial
function void foo()
{
    block entry
    {
        ffi (foo, bar);
    }
}
